# basic-framework

./: .gitignore  README.md  package-lock.json  tsconfig.json  vite.config.ts
src/: env.d.ts
src/backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
src/backend/app/: __init__.py  main.py
src/backend/app/ai/: __init__.py  chat_graph.py  deep_agent.py
src/backend/app/api/: deps.py
src/backend/app/api/v1/: router.py
src/backend/app/api/v1/endpoints/: chat.py  health.py
src/backend/app/core/: __init__.py  config.py
src/backend/app/db/: __init__.py  postgres.py  redis.py
src/backend/app/db/migrations/: 001_create_chat_turns.sql
src/backend/app/db/models/: __init__.py  chat_turn_record.py
src/backend/app/domain/entities/: chat.py
src/backend/app/repositories/: chat_history_repository.py
src/backend/app/schemas/: chat.py  health.py
src/backend/app/services/: chat_service.py
src/backend/scripts/: install.ps1  run.ps1
src/backend/tests/: test_api.py
src/components/Button/: index.tsx  style.scss
src/components/Modal/: index.tsx
src/components/Table/: index.tsx
src/frontend/: .gitignore  Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/frontend/client/src/: App.tsx  main.tsx
src/frontend/client/src/api/: auth.ts  user.ts
src/frontend/client/src/hooks/: useDebounce.ts
src/frontend/client/src/layout/: MainLayout.tsx
src/frontend/public/: manifest.json
src/hooks/: useAuth.ts
src/layout/: AuthLayout.tsx
src/store/: authSlice.ts
src/utils/: storage.ts  validator.ts
(+20 files in other folders)
