[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-scaffold"
version = "0.1.0"
description = "FastAPI backend scaffold with PostgreSQL, Redis, LangGraph, LangChain, and DeepAgents."
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]==0.48.0",
    "pydantic-settings==2.14.1",
    "psycopg2-binary==2.9.12",
    "redis==8.0.0",
    "langgraph==1.2.4",
    "langchain==1.3.2",
    "deepagents==0.6.7",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "httpx2==2.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
